--- a/index.html
+++ b/index.html
@@ -9,17 +9,44 @@
 </head>
 <body>
 	<header id="header" class="fixed-top">
-		<nav class="navbar navbar-expand-lg navbar-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000;">
 			<div class="container">
 				<a href="#" class="navbar-brand">Andrey Vasylyuk's Blog</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent" 
 				aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-					
+				<div class="collapse navbar-collapse" id="navContent">
+					<ul class="navbar-nav mr-auto mb-3 mb-lg-0">
+						<li class="nav-item">
+							<a href="#" class="nav-link">Home</a>
+						</li>
+						<li class="nav-item">
+							<a href="#" class="nav-link">Blog</a>
+						</li>
+						<li class="nav-item">
+							<a href="#" class="nav-link">About</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a href="#" class="nav-link dropdown-toggle"
+							id="navDrop" role="button" data-toggle="dropdown" aria-expanded="false"
+							>Dropdown</a>
+							<ul class="dropdown-menu" aria-labelledby="navDrop">
+								<li><a href="" class="dropwon-item">Drop1</a></li>
+								<li><a href="" class="dropwon-item">Drop2</a></li>
+								<li><a href="" class="dropwon-item">Drop3</a></li>
+							</ul>
+						</li>
+					</ul>
+					<form action="#" class="d-flex">
+						<input type="search" placeholder="Search" class="form-control mr-2">
+						<button type="submit" class="btn btn-outline-dark">Search</button>
+					</form>
+				</div>
 			</div>
 		</nav>
 	</header>
+	<h1>Some text</h1>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
 </body>
 </html>
